<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddStudent_Activity">


    <include layout="@layout/appbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:elevation="20dp"
        app:counterEnabled="false"
        app:boxBackgroundMode="none"
        android:hint="@string/enter_student_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/student_name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_et"
            android:elevation="20dp"
            android:fontFamily="@font/acme"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:elevation="20dp"
        app:counterEnabled="false"
        app:boxBackgroundMode="none"
        android:hint="@string/enter_student_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/student_number_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_et"
            android:elevation="20dp"
            android:fontFamily="@font/acme"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:elevation="20dp"
        app:counterEnabled="false"
        app:boxBackgroundMode="none"
        android:hint="@string/add_student_details"
        android:textDirection="firstStrongLtr"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/student_details_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_et"
            android:elevation="20dp"
            android:fontFamily="@font/acme"
            android:gravity="top|start"
            android:inputType="text"
            android:textAlignment="viewStart" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/apoinmentDateTV"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/background_et"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:hint="@string/select_apoinment_date"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/todo"
        android:src="@drawable/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:shapeAppearance="@style/Widget.MaterialComponents.Snackbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/apoinmentTimeTV"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/background_et"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:hint="@string/select_apoinment_time"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/apoinmentDateTV"
        app:layout_constraintStart_toStartOf="@+id/apoinmentDateTV"
        app:layout_constraintTop_toBottomOf="@+id/apoinmentDateTV" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/time"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton2"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton2"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton2"
        app:shapeAppearance="@style/Widget.MaterialComponents.Snackbar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="120dp"
        android:elevation="20dp"
        android:text="@string/save"
        android:fontFamily="@font/acme"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apoinmentTimeTV"/>


</androidx.constraintlayout.widget.ConstraintLayout>